added geom to field site detail view

--- a/frontend/templates/home/django-material-dashboard/field-detail-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/field-detail-fieldsite.html
@@ -40,6 +40,11 @@
       <div class="row m-3">
         <div class="card-body">
           <hr class="horizontal gray-light my-2">
+          {% if object.geom %}
+          <div class="col-md-12">
+            {{ object.geom }}
+          </div>
+          {% endif %}
           <ul class="list-group">
             {% if object %}
             <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Site ID:</strong> &nbsp; {{ object.site_id }}</li>
