--- a/frontend/templates/home/django-material-dashboard/field-detail-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/field-detail-fieldsite.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block title %} Detail {% endblock %}
+{% block extrahead %}{% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -40,15 +41,11 @@
       <div class="row m-3">
         <div class="card-body">
           <hr class="horizontal gray-light my-2">
-          {% if object.geom %}
-          <div class="col-md-12">
-            {{ object.geom }}
-          </div>
-          {% endif %}
           <ul class="list-group">
             {% if object %}
             <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Site ID:</strong> &nbsp; {{ object.site_id }}</li>
-            <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Grant:</strong> &nbsp; {{ object.grant.grant_label }}</li>
+            <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Geometry:</strong> &nbsp; {{ object.site_id }}</li>
+            <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Grant:</strong> &nbsp; {{ object.geom }}</li>
             <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">System:</strong> &nbsp; {{ object.system.system_label }}</li>
             <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Watershed:</strong> &nbsp; {{ object.watershed.watershed_label }}</li>
             <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Location Name:</strong> &nbsp; {{ object.general_location_name }}</li>
