adjusted dashboard style

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -85,28 +85,18 @@
       </div>
       <!-- BEGIN tables -->
       <div class="row mb-4">
-        <div class="col-lg-8 col-md-6 mb-md-0 mb-4">
+        <div class="col-lg-8 col-md-6 mt-4 mb-4">
           <div class="card">
             <div class="card-header pb-0">
               <div class="row">
                 <div class="col-lg-6 col-7">
                   <h6>Metadata Todo</h6>
+                </div>
+                <div class="col-lg-6 col-5 my-auto text-end">
                   <p class="text-sm mb-0">
                     <i class="fa fa-check text-success" aria-hidden="true"></i>
                     <span class="font-weight-bold ms-1">{{ return_metadata_count }} complete</span> to date
                   </p>
-                </div>
-                <div class="col-lg-6 col-5 my-auto text-end">
-                  <div class="dropdown float-lg-end pe-4">
-                    <a class="cursor-pointer" id="dropdownTable" data-bs-toggle="dropdown" aria-expanded="false">
-                      <i class="fa fa-ellipsis-v text-secondary"></i>
-                    </a>
-                    <ul class="dropdown-menu px-2 py-3 ms-sm-n4 ms-n5" aria-labelledby="dropdownTable">
-                      <li><a class="dropdown-item border-radius-md" href="javascript:;">Action</a></li>
-                      <li><a class="dropdown-item border-radius-md" href="javascript:;">Another action</a></li>
-                      <li><a class="dropdown-item border-radius-md" href="javascript:;">Something else here</a></li>
-                    </ul>
-                  </div>
                 </div>
               </div>
             </div>
@@ -116,7 +106,7 @@
           </div>
         </div>
         {% if user.is_active and user.is_staff %}
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 mt-4 mb-4">
           <div class="card h-100">
             <div class="card-header pb-0">
               <h6>Contact Us Overview</h6>
