added formatting for freezer log table

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -100,7 +100,7 @@
                 </div>
               </div>
             </div>
-            <div class="card-body px-0 pb-2">
+            <div class="card-body px-3 pb-2">
               {% render_table return_metadata_table %}
             </div>
           </div>
@@ -112,7 +112,7 @@
               <h6>Contact Us Overview</h6>
               <p class="text-sm">
                 <i class="fa fa-user text-success" aria-hidden="true"></i>
-                <span class="font-weight-bold">{{ replied_count }}</span> reply to date
+                <span class="font-weight-bold">{{ replied_count }} reply</span> to date
               </p>
             </div>
             <div class="card-body p-3">
