--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -65,7 +65,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-3 col-sm-6">
+        <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
           <div class="card">
             <div class="card-header p-3 pt-2">
               <div class="icon icon-lg icon-shape bg-gradient-info shadow-info text-center border-radius-xl mt-n4 position-absolute">
@@ -84,8 +84,8 @@
         </div>
       </div>
       <!-- BEGIN tables -->
-      <div class="row mb-4">
-        <div class="col-lg-8 col-md-6 mt-4 mb-4">
+      <div class="row">
+        <div class="col-xl-9 col-sm-6 mb-xl-0 mb-4">
           <div class="card">
             <div class="card-header pb-0">
               <div class="row">
@@ -106,7 +106,7 @@
           </div>
         </div>
         {% if user.is_active and user.is_staff %}
-        <div class="col-lg-4 col-md-6 mt-4 mb-4">
+        <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
           <div class="card h-100">
             <div class="card-header pb-0">
               <h6>Contact Us Overview</h6>
