--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -84,7 +84,7 @@
         </div>
       </div>
       <!-- BEGIN tables -->
-      <div class="row">
+      <div class="row mt-4">
         <div class="col-xl-9 col-sm-6 mb-xl-0 mb-4">
           <div class="card">
             <div class="card-header pb-0">
