--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -30,33 +30,39 @@
       <div class="section text-start py-5">
         <!-- -------- START Grids -------- -->
           <div class="container">
-            <!-- -------- START loop -------- -->
+              <!-- -------- START loop -------- -->
               {% if pub_list %}
-                {% for pub in pub_list %}
-                    <a href="{{ pub.publication_url }}"><h5 class="font-weight-bolder mt-3">{{ pub.publication_title }}</h5>
-                    <div class="row">
-                        <div class="col">
-                            <h5 class="font-weight-bolder mt-3">URL</h5>
+              {% for pub in pub_list %}
+              <div class="row">
+                  <a href="{{ pub.publication_url }}"><h5 class="font-weight-bolder mt-3">{{ pub.publication_title }}</h5>
+                      <div class="col-md-auto">
+                          <h5 class="font-weight-bolder mt-3">URL</h5>
                           <p class="pe-5">{{ pub.publication_url }}</p>
-                        </div>
-                        {% if pub.project_names.all %}
-                        <div class="col">
-                            <h5 class="font-weight-bolder mt-3">Affiliated Projects</h5>
-                            <p class="pe-5">{{ pub.project_names.all|join:", " }}</p>
-                        </div>
-                        {% endif %}
-                    <div class="w-100"></div>
-                    </div></a>
-                    <hr/>
-                {% endfor %}
-            {% else %}
-            <p class="pe-5">No publications are available.</p>
-            {% endif %}
-
-
-            <!-- -------- END loop -------- -->
+                      </div>
+                      {% if pub.project_names.all %}
+                      <div class="col-md-auto">
+                          <h5 class="font-weight-bolder mt-3">Affiliated Projects</h5>
+                          <p class="pe-5">{{ pub.project_names.all|join:", " }}</p>
+                      </div>
+                  </a>
+                  {% if perms.utility.change_publication %}
+                  <div class="col-md-1">
+                      <a href="{% url 'update_publication' pub.pk %}">
+                          <i class="fas fa-user-edit text-secondary text-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Publication"></i>
+                      </a>
+                  </div>
+                  {% endif %}
+              </div>
+              {% endif %}
+              <div class="w-100"></div>
+              <hr/>
+              {% endfor %}
+              {% else %}
+              <p class="pe-5">No publications are available.</p>
+              {% endif %}
+              <!-- -------- END loop -------- -->
           </div>
-        <!-- -------- END Grids -------- -->
+          <!-- -------- END Grids -------- -->
       </div>
     </div>
   </div>
