--- a/frontend/templates/home/django-material-kit/publication-update.html
+++ b/frontend/templates/home/django-material-kit/publication-update.html
@@ -28,19 +28,19 @@
                 <div class="z-index-2 text-center d-flex h-100 w-100 d-flex m-auto justify-content-center">
                   <div class="mask bg-gradient-dark opacity-8"></div>
                   <div class="p-5 ps-sm-8 position-relative text-start my-auto z-index-2">
-                    <h3 class="text-white">{{ page_title|title }} Add</h3>
-                    <p class="text-white opacity-8 mb-4">Fill out the form to add a publication.</p>
+                    <h3 class="text-white">{{ page_title|title }} Update</h3>
+                    <p class="text-white opacity-8 mb-4">Fill out the form to update this publication.</p>
                   </div>
                 </div>
               </div>
               <div class="col-lg-7">
-                {% if perms.utility.add_publication %}
+                {% if perms.utility.change_publication %}
                 <!-- begin form -->
                 {% include 'includes/django-material-kit/form.html' %}
                 <!-- end form -->
                 {% else %}
                 <div class="row">
-                  You do not have permission add a publication.
+                  You do not have permission update this publication.
                 </div>
                 {% endif %}
               </div>
