--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -30,21 +30,26 @@
       <div class="section text-start py-5">
         <!-- -------- START Grids -------- -->
           <div class="container">
+              <div class="row">
+                  <a href="{% url 'add_publication' %}">
+                      <i class="fas fa-user-add text-secondary text-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Add Publication"></i>
+                  </a>
+              </div>
               <!-- -------- START loop -------- -->
               {% if pub_list %}
               {% for pub in pub_list %}
               <div class="row">
-                  <a href="{{ pub.publication_url }}"><h5 class="font-weight-bolder mt-3">{{ pub.publication_title }}</h5>
-                      <div class="col-md-8">
+                  <div class="col-md-8">
+                      <a href="{{ pub.publication_url }}"><h5 class="font-weight-bolder mt-3">{{ pub.publication_title }}</h5>
                           <h5 class="font-weight-bolder mt-3">URL</h5>
                           <p class="pe-5">{{ pub.publication_url }}</p>
-                      </div>
-                      {% if pub.project_names.all %}
-                      <div class="col-md-3">
-                          <h5 class="font-weight-bolder mt-3">Affiliated Projects</h5>
-                          <p class="pe-5">{{ pub.project_names.all|join:", " }}</p>
-                      </div>
-                  </a>
+                      </a>
+                  </div>
+                  {% if pub.project_names.all %}
+                  <div class="col-md-3">
+                      <h5 class="font-weight-bolder mt-3">Affiliated Projects</h5>
+                      <p class="pe-5">{{ pub.project_names.all|join:", " }}</p>
+                  </div>
                   {% if perms.utility.change_publication %}
                   <div class="col-md-1">
                       <a href="{% url 'update_publication' pub.pk %}">
