--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -30,11 +30,13 @@
       <div class="section text-start py-5">
         <!-- -------- START Grids -------- -->
           <div class="container">
+              {% if perms.utility.add_publication %}
               <div class="row">
                   <a href="{% url 'add_publication' %}">
                       <i class="fas fa-user-add text-secondary text-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Add Publication"></i>
                   </a>
               </div>
+              {% endif %}
               <!-- -------- START loop -------- -->
               {% if pub_list %}
               {% for pub in pub_list %}
