--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -41,8 +41,11 @@
               {% if pub_list %}
               {% for pub in pub_list %}
               <div class="row">
+                  <div class="col-md-12">
+                      <h5 class="font-weight-bolder mt-3">{{ pub.publication_title }}</h5>
+                  </div>
                   <div class="col-md-8">
-                      <a href="{{ pub.publication_url }}"><h5 class="font-weight-bolder mt-3">{{ pub.publication_title }}</h5>
+                      <a href="{{ pub.publication_url }}"><h5 class="font-weight-bolder mt-3">URL</h5>
                           <h5 class="font-weight-bolder mt-3">URL</h5>
                           <p class="pe-5">{{ pub.publication_url }}</p>
                       </a>
