updated frontend publication template style

--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -45,7 +45,7 @@
                       <h5 class="font-weight-bolder mt-3">{{ pub.publication_title }}</h5>
                   </div>
                   <div class="col-md-8">
-                      <a href="{{ pub.publication_url }}"><h5 class="font-weight-bolder mt-3">URL</h5>
+                      <a href="{{ pub.publication_url }}">
                           <h5 class="font-weight-bolder mt-3">URL</h5>
                           <p class="pe-5">{{ pub.publication_url }}</p>
                       </a>
