updated frontend publication template

--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -32,8 +32,8 @@
           <div class="container">
               {% if perms.utility.add_publication %}
               <div class="row">
-                  <a href="{% url 'add_publication' %}" class="d-flex align-items-end justify-content-end">
-                      <h5 class="font-weight-bolder mt-3">Add Publication</h5>
+                  <a href="{% url 'add_publication' %}" class="d-flex align-items-center justify-content-end">
+                      <h5 class="font-weight-bolder mt-3 mx-2">Add New Publication</h5>
                       <i class="fa fa-plus text-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Add Publication"></i>
                   </a>
               </div>
