--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -34,7 +34,7 @@
               <div class="row">
                   <a href="{% url 'add_publication' %}" class="d-flex align-items-center justify-content-end">
                       <h5 class="font-weight-bolder mt-3 mx-2">Add New Publication</h5>
-                      <i class="fa fa-plus text-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Add Publication"></i>
+                      <i class="fa fa-plus text-secondary mt-3" data-bs-toggle="tooltip" data-bs-placement="top" title="Add Publication"></i>
                   </a>
               </div>
               {% endif %}
@@ -59,7 +59,7 @@
                   {% if perms.utility.change_publication %}
                   <div class="col-md-1">
                       <a href="{% url 'update_publication' pub.pk %}">
-                          <i class="fas fa-user-edit text-secondary text-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Publication"></i>
+                          <i class="fas fa-user-edit text-secondary text-sm mt-3" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Publication"></i>
                       </a>
                   </div>
                   {% endif %}
