updated frontend add template

--- a/frontend/templates/home/django-material-kit/publication-add.html
+++ b/frontend/templates/home/django-material-kit/publication-add.html
@@ -13,12 +13,21 @@
 
 <!-- https://images.unsplash.com/photo-1596808458255-6bb96beb2dbe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=80 -->
 
-  <header>
-    <div class="page-header min-height-400" style="background-image: url('https://images.unsplash.com/photo-1515767575735-d74656310f58?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80');" loading="lazy">
-      <span class="mask bg-gradient-dark opacity-8"></span>
+  <div class="page-header min-vh-80" style="background-image: url('https://images.unsplash.com/photo-1515767575735-d74656310f58?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')">
+    <span class="mask bg-gradient-dark opacity-6"></span>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 mx-auto">
+          <div class="text-center">
+            <h1 class="text-white">Publications</h1>
+            <p class="lead mb-4 text-white opacity-8">Peer-reviewed content</p>
+          </div>
+        </div>
+      </div>
     </div>
-  </header>
-  <section class="py-lg-5">
+  </div>
+
+<div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
     <div class="container">
       <div class="row">
         <div class="col">
@@ -49,7 +58,7 @@
         </div>
       </div>
     </div>
-  </section>
+</div>
 
 {% endblock content %}
 
