updated frontend template

--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -25,7 +25,7 @@
       </div>
     </div>
   </div>
-  <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
+  <div class="card card-body">
     <div class="container">
       <div class="section text-start py-5">
         <!-- -------- START Grids -------- -->
