--- a/frontend/templates/home/django-material-kit/publication-add.html
+++ b/frontend/templates/home/django-material-kit/publication-add.html
@@ -26,9 +26,7 @@
       </div>
     </div>
   </div>
-
-<div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
-    <div class="container">
+ <div class="container shadow-xl mx-3 mx-md-4 mt-n6">
       <div class="row">
         <div class="col">
           <div class="card box-shadow-xl overflow-hidden mb-5">
@@ -58,7 +56,6 @@
         </div>
       </div>
     </div>
-</div>
 
 {% endblock content %}
 
