updated frontend publication template

--- a/frontend/templates/home/django-material-kit/publication-update.html
+++ b/frontend/templates/home/django-material-kit/publication-update.html
@@ -13,13 +13,21 @@
 
 <!-- https://images.unsplash.com/photo-1596808458255-6bb96beb2dbe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=80 -->
 
-  <header>
-    <div class="page-header min-height-400" style="background-image: url('https://images.unsplash.com/photo-1515767575735-d74656310f58?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80');" loading="lazy">
-      <span class="mask bg-gradient-dark opacity-8"></span>
-    </div>
-  </header>
-  <section class="py-lg-5">
+  <div class="page-header min-vh-80" style="background-image: url('https://images.unsplash.com/photo-1515767575735-d74656310f58?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')">
+    <span class="mask bg-gradient-dark opacity-6"></span>
     <div class="container">
+      <div class="row">
+        <div class="col-md-8 mx-auto">
+          <div class="text-center">
+            <h1 class="text-white">Publications</h1>
+            <p class="lead mb-4 text-white opacity-8">Peer-reviewed content</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+ <div class="container shadow-xl mx-3 mx-md-4 mt-n6">
       <div class="row">
         <div class="col">
           <div class="card box-shadow-xl overflow-hidden mb-5">
@@ -27,10 +35,7 @@
               <div class="col-lg-5 position-relative bg-cover px-0" style="background-image: url('https://images.unsplash.com/photo-1633712940356-a9fc6c1e220b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=80')" loading="lazy">
                 <div class="z-index-2 text-center d-flex h-100 w-100 d-flex m-auto justify-content-center">
                   <div class="mask bg-gradient-dark opacity-8"></div>
-                  <div class="p-5 ps-sm-8 position-relative text-start my-auto z-index-2">
-                    <h3 class="text-white">{{ page_title|title }} Update</h3>
-                    <p class="text-white opacity-8 mb-4">Fill out the form to update this publication.</p>
-                  </div>
+                  <div class="p-5 ps-sm-8 position-relative text-start my-auto z-index-2"></div>
                 </div>
               </div>
               <div class="col-lg-7">
@@ -49,7 +54,6 @@
         </div>
       </div>
     </div>
-  </section>
 
 {% endblock content %}
 
