--- a/frontend/templates/home/django-material-kit/publication-add.html
+++ b/frontend/templates/home/django-material-kit/publication-add.html
@@ -26,6 +26,7 @@
       </div>
     </div>
   </div>
+
  <div class="container shadow-xl mx-3 mx-md-4 mt-n6">
       <div class="row">
         <div class="col">
@@ -34,10 +35,7 @@
               <div class="col-lg-5 position-relative bg-cover px-0" style="background-image: url('https://images.unsplash.com/photo-1633712940356-a9fc6c1e220b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=80')" loading="lazy">
                 <div class="z-index-2 text-center d-flex h-100 w-100 d-flex m-auto justify-content-center">
                   <div class="mask bg-gradient-dark opacity-8"></div>
-                  <div class="p-5 ps-sm-8 position-relative text-start my-auto z-index-2">
-                    <h3 class="text-white">{{ page_title|title }} Add</h3>
-                    <p class="text-white opacity-8 mb-4">Fill out the form to add a publication.</p>
-                  </div>
+                  <div class="p-5 ps-sm-8 position-relative text-start my-auto z-index-2"></div>
                 </div>
               </div>
               <div class="col-lg-7">
