--- a/frontend/templates/home/django-material-kit/publication-add.html
+++ b/frontend/templates/home/django-material-kit/publication-add.html
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col-md-8 mx-auto">
           <div class="text-center">
-            <h1 class="text-white">Publications</h1>
+            <h1 class="text-white">{{ page_title|title }}</h1>
             <p class="lead mb-4 text-white opacity-8">Peer-reviewed content</p>
           </div>
         </div>
