--- a/frontend/templates/includes/django-material-kit/form.html
+++ b/frontend/templates/includes/django-material-kit/form.html
@@ -10,7 +10,7 @@
 
 <form method="post" class="p-3" id="{{ page_title|slugify }}-form" >
     {% csrf_token %}
-    <div class="card-header px-4 py-sm-5 py-3">
+    <div class="card-header text-center px-4 py-sm-5 py-3">
         <h2>{{ form_header }}</h2>
         <p class="lead"> {{ form_subheader }} </p>
     </div>
