updated frontend site-add to pull watershed from GET request

--- a/frontend/templates/leaflet/widget-add-fieldsite.html
+++ b/frontend/templates/leaflet/widget-add-fieldsite.html
@@ -57,7 +57,8 @@
     </div>
 </div>
 <div class="col-md-12">
-    <p class="text-sm"> Manually specify your own latitude and longitude values and <strong>Jump there</strong> or add the site through the map.</p>
+    <p class="text-sm"> Manually specify your own latitude and longitude values and <strong>Jump there</strong> or add the site through the map.
+        <strong>Jump there</strong> will also automatically populate the Watershed based on the input coordinates.</p>
 </div>
 <div class="col-md-12 mb-2">
     <div id="div_readonly_id_geom" class="form-group">
