added response results data to hidden div

--- a/frontend/templates/leaflet/widget-add-fieldsite.html
+++ b/frontend/templates/leaflet/widget-add-fieldsite.html
@@ -72,7 +72,7 @@
 <div class="col-md-12 mb-4">
     {% leaflet_map id_map callback=id_map_callback loadevent=loadevent settings_overrides=settings_overrides %}
 </div>
-
+<div id="int-watershed" style="display: none;">
 {% endblock map %}
 
 {% endif %}
